# src/api/modules/events/event.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import { EventController } from "./event.controller";
+import { checkAccess } from "../../helpers/checkAccess";
+const router = Router();
+router.use(checkAccess);
+router.get("/list", EventController.getAllEvents);
+
+
+export default router;
