# swagger.yaml
@@ -17,6 +17,7 @@ tags:
   - name: Work Log Service
   - name: Invoices
   - name: Permission
+  - name: Events
 components:
   securitySchemes:
     BearerAuth:
@@ -160,6 +161,80 @@ components:
         rolePermissions:
           type: string
           example: '[{"role":"root","permissions":["create","delete","edit","list","read","view","update","*"]},{"role":"client","permissions":["create","delete","edit","list","view","update"]},{"role":"admin","permissions":["list","read","view","edit","update","create"]},{"role":"worker","permissions":["read","list","view"]}]'
+    Events:
+      type: object
+      properties:
+        message:
+          type: string
+          example: Data Fetched Successfully
+        statusCode:
+          type: integer
+          example: 200
+        data:
+          type: object
+          properties:
+            totalPages:
+              type: integer
+              example: 1
+            count:
+              type: integer
+              example: 5
+            currentPage:
+              type: integer
+              example: 1
+            nextPageLink:
+              type: string
+              nullable: true
+              example: null
+            prevPageLink:
+              type: string
+              nullable: true
+              example: null
+            results:
+              type: array
+              items:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    format: uuid
+                    example: 949b4704-909f-4980-9beb-974c5fe2e3e7
+                  title:
+                    type: string
+                    example: Shiva
+                  description:
+                    type: string
+                    example: Ssssssss
+                  startDate:
+                    type: string
+                    format: date-time
+                    example: 2025-06-27T01:04:30.019Z
+                  endDate:
+                    type: string
+                    format: date-time
+                    example: 2025-06-27T01:04:30.019Z
+                  status:
+                    type: string
+                    enum: [PENDING, INPROGRESS, COMPLETED]
+                    example: INPROGRESS
+                  color:
+                    type: string
+                    example: "#3B82F6"
+                  type:
+                    type: string
+                    enum: [PROJECT, TASK]
+                    example: PROJECT
+                  companyId:
+                    type: string
+                    format: uuid
+                    example: 09489cef-7e89-4cc5-85b3-dbbcdc3626aa
+                  projectId:
+                    type: string
+                    format: uuid
+                    nullable: true
+                    example: 78fcd709-9bc5-4e87-abf8-dc39f45faa66
+
+    
 paths:
   /auth/login:
     post:
@@ -677,5 +752,28 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Permission'
+  /events/list:
+    get:
+      tags:
+        - Events
+      summary: Retrieve all Events
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: page
+          in: query
+          schema:
+            type: integer
+            default: 1
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Events'
+  
 security:
   - BearerAuth: []
